istio-1.9.7/sticky-sessions/stickyapp/stickyapp-gateway-hybrid.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stickyapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: stickyapp-hybrid
spec:
  host: stickyapp.default.svc.cluster.local
  subsets:
  - name: normal
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: direct
    trafficPolicy:
      loadBalancer:
        simple: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stickyapp-hybrid
spec:
  hosts:
  - "*"
  gateways:
  - stickyapp-gateway
  http:
  - match:
    - uri:
        prefix: "/stickyapp"
      headers:
        use-direct:
          exact: "true"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: stickyapp.default.svc.cluster.local
        subset: direct
        port:
          number: 8080
  - match:
    - uri:
        prefix: "/stickyapp"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: stickyapp.default.svc.cluster.local
        subset: normal
        port:
          number: 8080
